# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: cli.py  loader.py
page_loader/scripts/: page_loader.py
tests/: test_get_name.py  test_load_files.py  test_loader.py
tests/fixtures/: brodude-ru.html
