[tool.poetry]
name = "stanislavglazko_page_loader"
version = "0.1.0"
description = ""
authors = ["stanislavglazko <stanislavglazko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
