[tool.poetry]
name = "stanislavglazko_page_loader"
version = "0.4.0"
description = ""
authors = ["stanislavglazko <stanislavglazko@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest-cov = "^2.8.1"
bs4 = "^0.0.1"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
requests = "^2.23.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
